# pdf-invoice

./: .gitignore  README.md  example.config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
src/invoice_generator/: __init__.py  generator.py
tests/: test_generator.py
