[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invoice-generator"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A PDF invoice generator with customizable parameters"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "reportlab>=3.6.12",
    "Pillow>=9.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
]

[project.scripts]
invoice-generator = "invoice_generator.generator:main"

[tool.hatch.build.targets.wheel]
packages = ["src/invoice_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3